MODORDERS-1149. Avoid simultaneous requests for the same tenant